After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 650171 - gst/dccp: fix build on newer mingw
gst/dccp: fix build on newer mingw
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other All
: Normal normal
: 0.10.23
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-05-14 12:51 UTC by Marc-Andre Lureau
Modified: 2011-05-16 06:53 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gst/dccp: fix build on newer mingw (1.93 KB, patch)
2011-05-14 12:51 UTC, Marc-Andre Lureau
committed Details | Review

Description Marc-Andre Lureau 2011-05-14 12:51:05 UTC
Fix this build error:
  CC     libgstdccp_la-gstdccpplugin.lo
In file included from ../../../gst/dccp/gstdccpclientsrc.h:29:0,
                 from ../../../gst/dccp/gstdccpplugin.c:24:
../../../gst/dccp/gstdccp_common.h:32:0: warning: WINVER redefined [enabled by default]
/usr/i686-w64-mingw32/sys-root/mingw/include/_mingw.h:231:0: note: this is the location of the previous definition
In file included from ../../../gst/dccp/gstdccpplugin.c:24:0:
../../../gst/dccp/gstdccpclientsrc.h:58:3: error: unknown type name 'uint8_t'
In file included from ../../../gst/dccp/gstdccpplugin.c:25:0:
../../../gst/dccp/gstdccpserversink.h:74:3: error: unknown type name 'uint8_t'
In file included from ../../../gst/dccp/gstdccpplugin.c:26:0:
../../../gst/dccp/gstdccpclientsink.h:67:3: error: unknown type name 'uint8_t'
In file included from ../../../gst/dccp/gstdccpplugin.c:27:0:
../../../gst/dccp/gstdccpserversrc.h:58:3: error: unknown type name 'uint8_t'
make: *** [libgstdccp_la-gstdccpplugin.lo] Error 1
Comment 1 Marc-Andre Lureau 2011-05-14 12:51:12 UTC
Created attachment 187811 [details] [review]
gst/dccp: fix build on newer mingw
Comment 2 Sebastian Dröge (slomo) 2011-05-16 06:53:54 UTC
Thanks, pushed with one minor change (stdint.h -> _stdint.h)

commit e5fc7a9f13a032c714fc3ad105ddf352accb82c3
Author: Marc-André Lureau <marcandre.lureau@gmail.com>
Date:   Sat May 14 14:48:56 2011 +0200

    gst/dccp: fix build on newer mingw
    
    Fix this build error:
      CC     libgstdccp_la-gstdccpplugin.lo
    In file included from ../../../gst/dccp/gstdccpclientsrc.h:29:0,
                     from ../../../gst/dccp/gstdccpplugin.c:24:
    ../../../gst/dccp/gstdccp_common.h:32:0: warning: WINVER redefined [enabled 
    /usr/i686-w64-mingw32/sys-root/mingw/include/_mingw.h:231:0: note: this is t
    In file included from ../../../gst/dccp/gstdccpplugin.c:24:0:
    ../../../gst/dccp/gstdccpclientsrc.h:58:3: error: unknown type name 'uint8_t
    In file included from ../../../gst/dccp/gstdccpplugin.c:25:0:
    ../../../gst/dccp/gstdccpserversink.h:74:3: error: unknown type name 'uint8_
    In file included from ../../../gst/dccp/gstdccpplugin.c:26:0:
    ../../../gst/dccp/gstdccpclientsink.h:67:3: error: unknown type name 'uint8_
    In file included from ../../../gst/dccp/gstdccpplugin.c:27:0:
    ../../../gst/dccp/gstdccpserversrc.h:58:3: error: unknown type name 'uint8_t
    make: *** [libgstdccp_la-gstdccpplugin.lo] Error 1
    
    https://bugzilla.gnome.org/show_bug.cgi?id=650171